1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* mux.c: Add #include <sys/mman.h> for munmap decl.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* mux.c (get_dirents): Use munmap instead of vm_deallocate.
	(netfs_get_dirents): Likewise.

1999-02-28  Roland McGrath  <roland@baalperazim.frob.com>

	* node.c (netfs_attempt_utimes): Fix typo in last change.

Sun Jan 31 18:41:17 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* node.c (netfs_attempt_utimes): Handle new possibility that ATIME
	or MTIME might be null.

1998-10-20  Roland McGrath  <roland@baalperazim.frob.com>

	* mux.c (get_dirents): Add braces to silence gcc warning.